# Slight

./: .gitignore  Cargo.toml  PLANING.md  README.md
assets/: stich.sh
assets/card/: card.ron  card.xcf
assets/config/: bindings.ron  display.ron
assets/droppoint/: droppoint.pclx  droppoint.ron
assets/font/: CardTxt.xcf  cardtxt.ron
assets/load/: loadscreen.ron
assets/mainmenu/: bg.ron
assets/splash/: splashscreen.ron  splashy.pclx
assets/suits/: Suits.xcf  suits.ron
src/: boundingbox.rs  cache.rs  card.rs  components.rs  main.rs  mousetracking.rs  slight.rs  states.rs  utils.rs
src/components/: card.rs  clickable.rs  draw.rs  droppoint.rs  loadscreen.rs  mousetracking.rs
src/states/: dummy.rs  load.rs  mainmenu.rs  slight.rs  splash.rs
src/states/dummy/: drop.rs  give.rs  hold.rs  load.rs  play.rs
src/states/splash/: splashscreen.rs
src/systems/: mod.rs  mousetracking.rs
