[package]
name = "slight"
version = "0.1.0"
authors = ["QuantumEntangledAndy <sheepchaan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version="0.15", features=["no-slow-safety-checks"] }
log = "0.4"
modulator = "0.1"
env_logger = "0.7"

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
